# ui

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bg-ui.sublime-project  visualizer.DotSettings
cmake/packaging/: CMakeLists.txt
projects/: CMakeLists.txt
projects/biogears-common/: CMakeLists.txt
projects/biogears-common/include/biogears/: Export.h
projects/biogears-common/include/biogears/chrono/: stop_watch.h  stop_watch_f.h
projects/biogears-common/include/biogears/container/: concurrent_queue.h  concurrent_queue.tci.h
projects/biogears-common/include/biogears/framework/: shared_propagate_const.h  unique_propagate_const.h
projects/biogears-common/src/threading/: ThreadPool.cpp
projects/biogears-core/include/biogears/container/: concurrent_ringbuffer.h  concurrent_ringbuffer.tci.h
projects/biogears-core/include/biogears/framework/: const_propagation_pointers.h
projects/biogears-core/include/biogears/math/: angles.h
projects/biogears-core/include/biogears/threading/: thread_pool.h  thread_work_channel.h  thread_work_channel.tci.h
projects/biogears-core/src/math/: angles.cpp
projects/ui/: BioGearsUI.rc  CMakeLists.txt
projects/ui/cpp/: main.cpp  version.cpp.in  version.h
projects/ui/cpp/biogears/: BioGearsData.cpp  BioGearsData.h  BloodPanel.h  DataRequest.cpp  DataRequest.h  DataRequestModel.cpp  DataRequestModel.h  EventTree.cpp  EventTree.h  Gadgets.h  Logger.cpp  Logger.h  PatientConditions.h  PatientMetrics.h  PatientState.h  Scenario.cpp  Scenario.h  Substance.h  Timeline.cpp  Timeline.h  Urinalysis.cpp  Urinalysis.h
projects/ui/cpp/biogears/Models/: CustomWidgetModel.cpp  CustomWidgetModel.h  DataRequestNode.cpp  (+9 more)
projects/ui/ext/cmake/: bundle.cmake
projects/ui/qml/: ActionDrawer.qml  ActionDrawerForm.qml  ActionDrawerForm.ui.qml  Controls.qml  ControlsForm.ui.qml  ControlsForm.ui.qml.autosave  CustomPlots.qml  CustomPlotsForm.ui.qml  GraphArea.qml  GraphAreaForm.ui.qml  LuaConsole.qml  LuaConsoleForm.ui.qml  Main.qml  MainForm.ui.qml  MenuArea.qml  MenuAreaForm.ui.qml  PatientBox.qml  PatientMenu.qml  PatientMenuForm.ui.qml  UIActionButton.qml  UIActionButtonForm.qml  UIActionDialog.qml  UIActionDialogForm.ui.qml  UIActionDrawer.qml  UIActionDrawerForm.qml  UIActionExplorer.qml  UIActionExplorerForm.qml  UIActionSwitch.qml  UIActionSwitchForm.qml  UIComboBox.qml  UIComboBoxForm.ui.qml  UICompoundWizard.qml  UICompoundWizardForm.ui.qml  UIControlPhysiology.ui.qml  UIEnvironmentWizard.qml  UIEnvironmentWizardForm.ui.qml  UIGraph.qml  UIGraphForm.ui.qml  UINutritionWizard.qml  UINutritionWizardForm.ui.qml  (+31 more)
projects/ui/qml/actions/: ActionModel.qml  UIActionForm.ui.qml  UIAcuteRespiratoryDistress.qml  UIAcuteStress.qml  UIAdministerFluids.qml  UIAirwayObstruction.qml  UIAnesthesiaMachine.qml  UIApnea.qml  UIAsthmaAttack.qml  UIAsthmaAttackForm.ui.qml  UIBronchoconstriction.qml  UIBurnWound.qml  UICardiacArrest.qml  UICompoundInfusion.qml  UIConsumeMeal.qml  UIDrugAdministration.qml  UIDrugInfusion.qml  UIExercise.qml  UIHemorrhage.qml  UIInfection.qml  UIInhaler.qml  UINeedleDecompression.qml  UIPainStimulus.qml  UIPainStimulusForm.ui.qml  UIPatientAssessment.qml  UISerialize.qml  UITensionPneumothorax.qml  UITourniquet.qml  UITransfusion.qml  UITraumaticBrainInjury.qml  UIUpdateEnvironment.qml
projects/ui/qml/dashboards/: EnergyPanel.qml  RenalPanel.qml  VitalsPanel.qml
projects/ui/qml/data/: BloodChemistry.qml  Cardiovascular.qml  Drugs.qml  Endocrine.qml  Energy.qml  Gastrointestinal.qml  Hepatic.qml  Nervous.qml  Renal.qml  Respiratory.qml  Tissue.qml
projects/ui/qml/elements/: UIActionDialog.qml  UIActionDialogForm.ui.qml  UIActionSwitchForm.qml  UIBioGearsButtonForm.ui.qml  UIComboBox.qml  UIComboBoxForm.ui.qml  UIControlPhysiology.ui.qml  UIDataRequest.qml  UIDataRequestForm.ui.qml  UINutritionWizard.qml  UINutritionWizardForm.ui.qml  UIPatientWizard.qml  UIPlaybackForm.ui.qml  UIPlotSeries.qml  UIPlotSeriesForm.ui.qml  UIRadioButton.qml  UIRadioButtonForm.ui.qml  UIScalarForm.ui.qml  UIScenarioBuilder.qml  UIScenarioBuilderForm.ui.qml  UIScenarioTimelineForm.ui.qml  UISpinBox.qml  UISpinBoxForm.ui.qml  UISubstanceEntry.qml  UISubstanceEntryForm.ui.qml  UISubstanceWizard.qml  UISubstanceWizardForm.ui.qml  UITabButtonForm.ui.qml  UITextField.qml  UITextFieldForm.ui.qml  UITextInputForm.ui.qml
projects/ui/src/: .main.cpp.swp  BgChart.cpp  BgChart.h  BgChartDriver.cpp  BgChartDriver.h  BioGearsChart.cpp  BioGearsChart.h  QtUI.cpp  QtUI.h  QtUI.qrc  ScenarioData.cpp  ScenarioData.h  State.cpp  State.h  StateManager.cpp  StateManager.h  main.cpp  main.h
projects/ui/src/phys/: DataRequestModel.cpp  DataRequestModel.h  PhysiologyDriver.cpp  PhysiologyDriver.h  PhysiologyThread.cpp  PhysiologyThread.h
projects/ui/src/utils/: ActionDataStruct.h  Resources.cpp  Resources.h  ScenarioManager.cpp  ScenarioManager.h  State.cpp  State.h  StateManager.cpp  StateManager.h
projects/ui/src/widgets/: DurationInputWidget.cpp  DurationInputWidget.h  EnvironmentConfigWidget.cpp  EnvironmentConfigWidget.h  FrequencyInputWidget.cpp  FrequencyInputWidget.h  LengthInputWidget.cpp  LengthInputWidget.h  MainWindow.cpp  MainWindow.cpp~RF16ec5ab4.TMP  MainWindow.h  MassInputWidget.cpp  MassInputWidget.h  MultiSelectionWidget.cpp  MultiSelectionWidget.h  PatientConfigWidget.cpp  PatientConfigWidget.h  PressureInputWidget.cpp  PressureInputWidget.h  ScenarioConfigWidget.cpp  ScenarioConfigWidget.h  ScenarioResultsWidget.cpp  ScenarioResultsWidget.cpp~RF329af4.TMP  ScenarioResultsWidget.h  ScenarioToolbar.cpp  ScenarioToolbar.h  TemperatureInputWidget.cpp  TemperatureInputWidget.h  TextEditWindow.cpp  ThermalResistanceInputWidget.cpp  ThermalResistanceInputWidget.h  TimelineConfigWidget.cpp  TimelineConfigWidget.h  TimelineWidget.cpp  TimelineWidget.h  UnitComboBox.cpp  UnitComboBox.h  UnitInputWidget.cpp  UnitInputWidget.h  VelocityInputWidget.cpp  (+1 more)
projects/ui/src/widgits/: MainWindow.cpp  MainWindow.h  MultiSelectionWidget.cpp  ScenarioToolbar.cpp  ScenarioToolbar.h  TextEditWindow.cpp  TextEditWindow.h
(+8 files in other folders)
